# agent-python

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  test_agent.py  test_app.py
.github/workflows/: ci.yml  github-release.yml
aivory_monitor/: __init__.py  agent.py  config.py
aivory_monitor/exceptions/: __init__.py  capture.py  handler.py
aivory_monitor/integrations/: __init__.py  django.py  fastapi.py  flask.py
aivory_monitor/tracer/: __init__.py  trace_manager.py
aivory_monitor/transport/: __init__.py  connection.py
tests/: test_basic.py
